文章列表加入了编辑链接，可直接跳转到编辑页编辑。

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,7 @@
 .post-list .post .more-link-wrapper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .sidebar section h2 {
