--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -128,6 +128,7 @@
     .more-link-wrapper {
       display: flex;
       align-items: center;
+      justify-content: space-between;
     }
   }
 }
