--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,15 +245,19 @@
   overflow: hidden;
 }
 
-.pingback {
+.text-avatar, .pingback {
   width: 42px;
-  background: #488CB8;
   text-align: center;
   font-size: 14px;
   color: #ffffff;
   font-weight: 700;
   line-height: 42px;
   border-radius: 50%;
+  margin-right: 10px;
+}
+
+.pingback {
+  background: #488CB8;
 }
 
 .avatar {
