--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -278,16 +278,21 @@
   overflow: hidden;
 }
 
-// 评论区引用头像
-.pingback {
+// 评论区文字头像和引用头像
+.text-avatar,.pingback {
   width: 42px;
-  background: #488CB8;
   text-align: center;
   font-size: 14px;
   color: #ffffff;
   font-weight: 700;
   line-height: 42px;
   border-radius: 50%;
+  margin-right: 10px;
+}
+
+// 评论区引用头像
+.pingback {
+  background: #488CB8;
 }
 
 // 通用的头像样式
