--- a/assets/css/icon.css
+++ b/assets/css/icon.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('../fonts/icomoon.eot?y4v20v');
-  src:  url('../fonts/icomoon.eot?y4v20v#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?y4v20v') format('truetype'),
-    url('../fonts/icomoon.woff?y4v20v') format('woff'),
-    url('../fonts/icomoon.svg?y4v20v#icomoon') format('svg');
+  src:  url('../fonts/icomoon.eot?8c9v4l');
+  src:  url('../fonts/icomoon.eot?8c9v4l#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?8c9v4l') format('truetype'),
+    url('../fonts/icomoon.woff?8c9v4l') format('woff'),
+    url('../fonts/icomoon.svg?8c9v4l#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,10 +25,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-thumbs-up:before {
+.icon-qzone-logo:before {
   content: "\e900";
 }
-.icon-qzone-logo:before {
+.icon-thumbs-up:before {
   content: "\e901";
 }
 .icon-pencil:before {
@@ -75,6 +75,9 @@
 }
 .icon-cancel-circle:before {
   content: "\ea0d";
+}
+.icon-arrow-up:before {
+  content: "\ea32";
 }
 .icon-arrow-right2:before {
   content: "\ea3c";
