--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -49,6 +49,8 @@
   pre > code {
     padding: 10px;
     font-size: 16px;
+    white-space: pre;
+    word-wrap: normal;
   }
   h1,h2,h3,h4,h5,h6 {
     color: #333333;
