--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -325,6 +325,10 @@
   line-height: 42px;
   border-radius: 50%;
   margin-right: 10px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .pingback {
