--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -365,6 +365,10 @@
   line-height: 42px;
   border-radius: 50%;
   margin-right: 10px;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 // 评论区引用头像
