--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,32 +283,40 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1200;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
 }
-#max-img-box .features-btn {
-  position: absolute;
+
+.max-img-features-btn {
+  position: fixed;
   top: 10px;
   right: 10px;
-  z-index: 1230;
+  z-index: 1203;
+  display: none;
 }
-#max-img-box .features-btn button {
+.max-img-features-btn button {
   color: #FFFFFF;
   text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
   font-size: 15px;
 }
-#max-img-box img {
-  position: absolute;
-  cursor: move;
+.max-img-features-btn button:hover {
+  color: #F7E6D2;
 }
-#max-img-box #img-info {
-  position: absolute;
+
+#img-info {
+  position: fixed;
   bottom: 30px;
   left: 50%;
   transform: translate(-50%, 0);
   font-size: 16px;
-  /*text-shadow: 0 -1px #F8F9FA, 1px 0 #333333;*/
   text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+  z-index: 1203;
+  display: none;
+}
+
+#max-img {
+  position: absolute;
+  cursor: move;
+  display: none;
+  z-index: 1201;
 }
 
 .stop-scrolling {
