--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -319,35 +319,40 @@
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1200;
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-  // 功能按钮区
-  .features-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1230;
-    button {
-      color: #FFFFFF;
-      text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
-      font-size: 15px;
+}
+// 图片灯箱功能按钮区
+.max-img-features-btn {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 1203;
+  display: none;
+  button {
+    color: #FFFFFF;
+    text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+    font-size: 15px;
+    &:hover {
+      color: #F7E6D2;
     }
   }
-  // 图片
-  img {
-    position: absolute;
-    cursor: move;
-  }
-  // 图片描述
-  #img-info {
-    position: absolute;
-    bottom: 30px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    font-size: 16px;
-    /*text-shadow: 0 -1px #F8F9FA, 1px 0 #333333;*/
-    text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
-  }
+}
+// 图片描述
+#img-info {
+  position: fixed;
+  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  font-size: 16px;
+  text-shadow: 0 1px #333333, 1px 0 #333333, -1px 0 #333333, 0 -1px #333333;
+  z-index: 1203;
+  display: none;
+}
+// 图片
+#max-img {
+  position: absolute;
+  cursor: move;
+  display: none;
+  z-index: 1201;
 }
 // 禁止滚动
 .stop-scrolling {
