增加了一套 Sunburst 代码高亮主题
1. 删除了 highlight.scss，代码高亮样式写在 style.scss 中。
2. 从之前的复制 CSS 代码到一个文件中改为直接欸使用 @import 引入主题 CSS。
3. 增加了 Sunburst 代码高亮主题。
4. function.php 中增加了 Sunburst 的设置。

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,9 +6,6 @@
 * Licensed under MIT
 */
 
-// 引入代码高亮配置
-@import "highlight";
-
 // 文章头图
 @mixin headerImg {
   width: 100%;
@@ -142,6 +139,50 @@
       min-width: 90px;
     }
   }
+}
+
+// 代码高亮样式
+// stackoverflow-light 样式
+.stackoverflow-light {
+  pre {
+    background: #F6F6F6;
+    .line-box {
+      background: #F6F6F6;
+      div {
+        color: #777777;
+        border-right: 1px solid #777777;
+      }
+    }
+  }
+  @import "stackoverflow-light.min";
+}
+// vs2015样式
+.vs2015 {
+  pre {
+    background: #1E1E1E;
+    .line-box {
+      background: #1E1E1E;
+      div {
+        color: #9B9B9B;
+        border-right: 1px solid #9B9B9B;
+      }
+    }
+  }
+  @import "vs2015.min";
+}
+// Sunburst高对比度样式
+.sunburst {
+  pre {
+    background: #000000;
+    .line-box {
+      background: #000000;
+      div {
+        color: #AEAEAE;
+        border-right: 1px solid #AEAEAE;
+      }
+    }
+  }
+  @import "sunburst.min";
 }
 
 * {
