修改了搜索页无法查找到文章的文字提示和适配了深色模式
1. archive.php 中修改了没有查找到文章的文字提示内容。
2. style.scss 中为没有查找到文章的文字提示适配了声色模式。

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1169,6 +1169,12 @@
 .dark-color .archive-description {
   color: #F9F9F9;
 }
+.dark-color .no-content {
+  color: #F5F5F5;
+}
+.dark-color .no-content hr {
+  background: #F5F5F5;
+}
 .dark-color footer nav {
   color: #F9F9F9;
 }
