--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -73,7 +73,6 @@
     }
   }
   pre > code {
-    padding: 12px;
     font-size: 16px;
     white-space: pre;
     word-wrap: normal;
@@ -191,6 +190,23 @@
   }
   @import "sunburst.min";
 }
+// 包含行号的样式
+.post-content[data-code-line-num="show"] {
+  pre {
+    code {
+      padding: 12px 10px;
+    }
+  }
+}
+// 不包含行号的样式
+.post-content[data-code-line-num="hide"] {
+  pre {
+    code {
+      padding: 12px 16px;
+    }
+  }
+}
+
 
 * {
   text-transform: none;
