加入了文章有效期设置和提示
1. functions.php 中加入了文章有效期设置
2. functions.php 中加入了一个获取天数间隔的函数
3. post.php 中加入了警示信息显示，如果当前时间超过了文章有效期就会显示一条警示信息
4. style.scss 中加入了警示信息提示的深色配色

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1013,6 +1013,10 @@
 .dark-color .comment-count, .dark-color .edit-link {
   color: #FF4242;
 }
+.dark-color .expiration-reminder {
+  background: #343A40;
+  color: #F5F5F5;
+}
 .dark-color .pagination li:not(.active) a {
   background: #212529;
   color: #F5F5F5;
