--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,9 +305,43 @@
 .post-list .post .post-title a:focus {
   color: #D0220F;
 }
+.post-list .post .mini-header-image a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center;
+  background-color: #E0E0E0;
+}
+.post-list .post .mini-header-image a:after {
+  content: "";
+  padding-bottom: 75%;
+  display: block;
+}
 .post-list .post .more-link-wrapper {
+  height: 28px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+}
+.post-list .post-content[data-header-image-type=mini] .content-box {
+  display: flex;
+  flex-direction: column;
+  flex: 1 auto;
+}
+.post-list .post-content[data-header-image-type=mini] .content-box .summary-box p {
+  max-height: 80px;
+  overflow-y: hidden;
+}
+.post-list .post-content[data-header-image-type=mini] .content-box .summary-box {
+  display: flex;
+  justify-content: flex-start;
+  flex: 1;
+}
+.post-list .post-content[data-header-image-type=mini] .content-box .more-link-wrapper {
+  display: flex;
   justify-content: space-between;
 }
 
@@ -929,9 +963,25 @@
   font-weight: 700;
 }
 
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .post-content[data-header-image-type=mini] .summary-box p {
+    max-height: 60px;
+    overflow-y: hidden;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .post-content[data-header-image-type=mini] .summary-box p {
+    max-height: 80px;
+    overflow-y: hidden;
+  }
+}
 @media screen and (min-width: 576px) and (max-width: 767px) {
   .post-list .post .post-title {
     font-size: 18px;
+  }
+  .post-list .post .post-content[data-header-image-type=mini] .summary-box p {
+    max-height: 80px;
+    overflow-y: hidden;
   }
 
   .post-page .post-title {
@@ -954,6 +1004,10 @@
 @media screen and (max-width: 575px) {
   .post-list .post .post-title {
     font-size: 18px;
+  }
+  .post-list .post .post-content[data-header-image-type=mini] .summary-box p {
+    max-height: 60px;
+    overflow-y: hidden;
   }
 
   .post-page .post-title {
