--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -233,11 +233,48 @@
       text-overflow: ellipsis;
       white-space: nowrap;
     }
+    // 小头图
+    .mini-header-image a {
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+      background-size: cover;
+      background-position: center;
+      background-color: #E0E0E0;
+      &:after {
+        content: '';
+        padding-bottom: 75%;
+        display: block;
+      }
+    }
     // 查看全文和查看评论区域
     .more-link-wrapper {
+      height: 28px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+    }
+  }
+  .post-content[data-header-image-type="mini"] {
+    .content-box {
+      display: flex;
+      flex-direction: column;
+      flex: 1 auto;
+      .summary-box p {
+        max-height: 80px;
+        overflow-y: hidden;
+      }
+      .summary-box {
+        display: flex;
+        justify-content: flex-start;
+        flex: 1;
+      }
+      .more-link-wrapper {
+        display: flex;
+        justify-content: space-between;
+      }
     }
   }
 }
@@ -715,6 +752,28 @@
   }
 }
 
+// >= 992 且 <= 1199
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  // 小头图的文章列表
+  .post-content[data-header-image-type="mini"] {
+    .summary-box p {
+      max-height: 60px;
+      overflow-y: hidden;
+    }
+  }
+}
+
+// >= 768 且 <= 991
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  // 小头图的文章列表
+  .post-content[data-header-image-type="mini"] {
+    .summary-box p {
+      max-height: 80px;
+      overflow-y: hidden;
+    }
+  }
+}
+
 // >= 576 且 <= 767
 @media screen and (min-width: 576px) and (max-width: 767px) {
   // 文章列表
@@ -723,6 +782,12 @@
       // 文章标题
       .post-title {
         font-size: 18px;
+      }
+      .post-content[data-header-image-type="mini"] {
+        .summary-box p {
+          max-height: 80px;
+          overflow-y: hidden;
+        }
       }
     }
   }
@@ -744,6 +809,12 @@
       // 文章标题
       .post-title {
         font-size: 18px;
+      }
+      .post-content[data-header-image-type="mini"] {
+        .summary-box p {
+          max-height: 60px;
+          overflow-y: hidden;
+        }
       }
     }
   }
